feat: 트위터 메타 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,14 @@
       property="og:description"
       content="더 깊은 학습, 어디서든 디깅해요. 디그디그딥"
     />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DigDigDeep - 디그디그딥" />
+    <meta
+      name="twitter:description"
+      content="더 깊은 학습, 어디서든 디깅해요. 디그디그딥"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>DigDigDeep</title>
   </head>
